# PeCasue

./: .env.example  .gitignore  Because.yaml.example  DATABASES.md  Dockerfile.multi  README.md  SERVER_DEPLOYMENT.md  check-mongo-actual.sh  compare-compose-files.md  debug_rag.js  deploy-compose.yml  docker-compose.dev.yml  docker-compose.dev.yml.bak  docker-compose.override.yaml.example  docker-compose.yml  envex.md  package-lock.json  package.json  rag.yml  start-databases.sh  start-services.sh  stop-databases.sh  stop-services.sh  test-direct-ip-connection.sh  服务器env.md
BeCauseSkills/: 2.md  README.md  (+3 more)
pipeline-svc/: .env.example  Dockerfile  README.md  pyproject.toml
pipeline-svc/scripts/: e2e_smoke.py
pipeline-svc/server/: __init__.py  main.py
pipeline-svc/server/agents/: compare_agent.py  config.py  copilot.py  mapper_agent.py  password_agent.py  tools.py  unknown_channel_structurer.py
pipeline-svc/server/api/: agent.py  channels.py  compare.py  files.py  health.py  llm_configs.py  observe.py  preview.py  rules.py  streams.py  tasks.py  upload.py
pipeline-svc/server/compare/: runner.py  tools.py
pipeline-svc/server/core/: channel_classifier.py  channel_prescan.py  llm_config_repo.py  orchestrator.py  paths.py  pipeline_state.py  secret_box.py  task_db.py  task_logger.py  task_repo.py  zip_extractor.py
pipeline-svc/server/parsers/: __init__.py  base.py
pipeline-svc/server/parsers/_legacy/: __init__.py
pipeline-svc/server/parsers/_shared/: __init__.py  dispatcher.py
pipeline-svc/server/rules/: excel_import.py  password_book.py  schema.py  store.py
(+286 files in other folders)
