[project]
name = "pipeline-svc"
version = "0.1.0"
description = "PeCause Pipeline sidecar (FastAPI) — bank statement reconciliation orchestration."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "loguru>=0.7.2",
    "cryptography>=42.0.0",
    # Phase 2-3+ (parsers / orchestrator)
    "pandas>=2.0.0,<3.0.0",
    # pingpong cost_allocate.py 使用 engine="calamine" 读取含异常筛选器的 xlsx
    "python-calamine>=0.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "msoffcrypto-tool>=5.0.0",
    "pdfplumber>=0.10.0",
    "py7zr>=1.1.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.27.0",
    # IBC 账单 OCR 回退（本机需 brew install tesseract；优先 Paddle 见 paddle 可选说明）
    "pytesseract>=0.3.10",
    # Phase 7 (AgentScope)
    "agentscope>=1.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
